--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = colour-of-molecule
-version = 0.0.2.dev2
+version = 0.0.2.dev4
 description = Tools for colour related analysis of various QCh software output files.
 long_description = file: README.rst
-long_description_content_type = text/markdown
+long_description_content_type = text/x-rst
 url = https://github.com/MichalPt/colour_of_molecule
 author = Michal Ptacek
 author_email = ptacekmichal@outlook.com
