--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = colour-of-molecule
-version = 0.0.2.dev5
+version = 0.0.3.dev1
 description = Tools for colour related analysis of various QCh software output files.
-long_description = file: README.rst
+long_description = file: readme.rst
 long_description_content_type = text/x-rst
 url = https://github.com/MichalPt/colour_of_molecule
 author = Michal Ptacek
