Templates and setup.cfg updated

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
 name = colour-of-molecule
-version = 0.0.3.dev2
+version = 0.1.0
 description = Tools for colour related analysis of various QCh software output files.
 long_description = file: readme.rst
 long_description_content_type = text/x-rst
 url = https://github.com/MichalPt/colour_of_molecule
 author = Michal Ptacek
-author_email = ptacekmichal@outlook.com
+author_email = michalptacek@outlook.com
 license = MIT
 classifiers =
     Programming Language :: Python :: 3
@@ -18,7 +18,7 @@ package_dir =
     = src
 python_requires = >=3.6
 install_requires =
-    colour-science
+    colour-science >=0.4.6
     numpy
     matplotlib
     InquirerPy
